fixed some spacing and line break issues in output text added info boxes for slider info buttons wired slider info buttons
git-svn-id: svn+ssh://studio.local/var/svn/mtcscs/trunk@158 26d378a2-6a99-40ce-9862-508a7a6a5e16

--- a/site/style/screen-housing.css
+++ b/site/style/screen-housing.css
@@ -106,6 +106,7 @@ img {
 }
 
 #info h5 {
+	position:relative;
 	margin:0;
 	font-size: 1em;
 	text-align: left;
@@ -310,7 +311,7 @@ height: 0;
 width: 0;
 position: absolute;
 border-left: 20px solid transparent;
-border-right: 1px solid transparent;
+border-right: 0 solid transparent;
 border-top: 10px solid black;
 left: 30%;
 bottom: -10px;
@@ -400,6 +401,10 @@ ol li p {
 		color: #fff;
 		padding: 6px;
 		line-height: 0;
+		cursor:pointer;
+	}
+	.controls a:hover{
+		opacity:.7;
 	}
 
 	#select-center {
